Place video frame on top of banner, preventing top getting cut off

--- a/public/style.css
+++ b/public/style.css
@@ -21,7 +21,6 @@ body {
   position: fixed;
   top: 0;
   left: 1%;
-  z-index: 1;
   border-top: 15px solid black
 }
 
@@ -32,7 +31,7 @@ body {
   right: 0;
   width: 5%;
   float: right;
-  z-index: 2;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -78,9 +77,8 @@ body {
 }
 
 iframe {
-  height: 58vh; 
-  width: 58vw;
-  margin-bottom: 1%
+  height: 57vh; 
+  width: 57vw;
 }
 
 #caption {
